change line chart design 2 10/3/24

--- a/app/src/main/res/layout/diets_home_list_item.xml
+++ b/app/src/main/res/layout/diets_home_list_item.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="250dp"
     android:background="@color/back_ground"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -23,34 +23,32 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints,UselessParent">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/active_card"
-                android:layout_width="300dp"
-                android:layout_height="200dp"
-                android:backgroundTint="@color/card_view"
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="60dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                app:cardCornerRadius="20dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:background="@color/card_view">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/active_card"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:backgroundTint="@color/card_view"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/card_view">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
 
                     <ImageView
-                        android:layout_width="300dp"
-                        android:layout_height="200dp"
-                        android:layout_gravity="center"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentTop="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_gravity="center"
                         android:src="@drawable/healthy_food_img"
                         tools:ignore="ContentDescription" />
                 </RelativeLayout>
@@ -59,20 +57,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:layout_marginTop="60dp"
                     android:layout_alignParentEnd="true"
                     android:layout_gravity="center"
+                    android:layout_marginTop="60dp"
                     android:background="@drawable/workout_plans_list_text_bg"
                     android:orientation="vertical"
-                    android:padding="10dp">
+                    android:paddingVertical="20dp"
+                    android:paddingStart="5dp">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tv_Workout_plan_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingStart="20dp"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentEnd="true"
+                        android:paddingStart="20dp"
                         android:text="Diet name"
                         android:textColor="@color/white"
                         android:textSize="20dp"
