--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,7 @@
                     <FrameLayout
                         android:id="@+id/frag_container"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="30dp">
+                        android:layout_height="wrap_content">
 
                     </FrameLayout>
 
