--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -23,33 +23,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         tools:ignore="MissingConstraints,ObsoleteLayoutParam,ScrollViewSize,UselessLeaf">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/text_account"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout"
+            android:background="@color/dark_blue"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Account"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
+            android:layout_height="60dp"
             android:layout_alignParentEnd="true"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:fontFamily="@font/opensans_bold"
-            tools:ignore="HardcodedText" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal"
+            tools:ignore="MissingConstraints">
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/text_account"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:fontFamily="@font/opensans_bold"
+                android:paddingStart="20dp"
+                android:text="Account"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="HardcodedText" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/text_account">
+            android:layout_below="@+id/linearLayout">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
