--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -23,33 +23,53 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         tools:ignore="MissingConstraints,ObsoleteLayoutParam,ScrollViewSize,UselessLeaf">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/text_reports"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout"
+            android:background="@color/dark_blue"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/reports"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
+            android:layout_height="60dp"
             android:layout_alignParentEnd="true"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:fontFamily="@font/opensans_bold"
-            tools:ignore="HardcodedText" />
-        
-        <RelativeLayout
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal"
+            tools:ignore="MissingConstraints">
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/text_reports"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:paddingStart="20dp"
+                android:fontFamily="@font/opensans_bold"
+                android:text="@string/reports"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="HardcodedText" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_below="@+id/linearLayout"
+            android:layout_marginHorizontal="20dp">
+
+        <LinearLayout
             android:id="@+id/rl_my_weight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/text_reports"
             android:layout_marginTop="20dp">
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -64,7 +84,7 @@
                 android:fontFamily="@font/opensans_bold"
                 tools:ignore="HardcodedText" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/rl_chart"
@@ -78,7 +98,6 @@
                 android:id="@+id/cv_Weight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="20dp"
                 android:layout_marginBottom="20dp"
                 app:cardCornerRadius="25dp"
@@ -298,7 +317,6 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="20dp"
                 app:cardCornerRadius="25dp"
                 android:backgroundTint="@color/card_view"
@@ -446,7 +464,7 @@
             </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
-
+        </LinearLayout>
     </RelativeLayout>
 
     </ScrollView>
