--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -23,25 +23,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         tools:ignore="MissingConstraints,ObsoleteLayoutParam,ScrollViewSize,UselessLeaf">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/text_workouts"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout"
+            android:background="@color/dark_blue"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal"
+            tools:ignore="MissingConstraints">
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/text_workouts"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="20dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:fontFamily="@font/opensans_bold"
+                android:text="@string/Workouts"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="HardcodedText" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/Workouts"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:fontFamily="@font/opensans_bold"
-            tools:ignore="HardcodedText" />
+            android:layout_below="@+id/linearLayout"
+            android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/rl_customer_workouts"
@@ -49,8 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/text_workouts">
+            android:layout_alignParentEnd="true">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/active_card"
@@ -206,6 +224,8 @@
             </RelativeLayout>
 
         </RelativeLayout>
+
+        </LinearLayout>
 
 
     </RelativeLayout>
