--- a/app/src/main/res/layout/my_workout_plans_home_list_item.xml
+++ b/app/src/main/res/layout/my_workout_plans_home_list_item.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="250dp"
     android:background="@color/back_ground"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -25,11 +25,9 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/active_card"
-                android:layout_width="300dp"
-                android:layout_height="200dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:backgroundTint="@color/card_view"
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="60dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
                 app:cardCornerRadius="20dp"
@@ -40,12 +38,12 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
 
                     <ImageView
-                        android:layout_width="300dp"
-                        android:layout_height="200dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentTop="true"
