--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,15 +45,14 @@
         android:id="@+id/bottom_nav_bar"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
         android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_menu"
         android:background="@drawable/bottom_navigation_bg"
         app:itemIconSize="30dp"
-        app:itemPaddingTop="12dp"
+        app:itemPaddingTop="15dp"
         app:itemTextColor="@color/white"
+        style="@style/bottom_nav"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
