--- a/app/src/main/res/layout/activity_appointment.xml
+++ b/app/src/main/res/layout/activity_appointment.xml
@@ -123,6 +123,7 @@
                         android:layout_alignParentTop="true">
 
                         <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/app_tre_image"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_alignParentTop="true"
@@ -147,7 +148,7 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/name"
+                                android:id="@+id/app_tre_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunito_bold"
@@ -158,22 +159,23 @@
                                 tools:ignore="HardcodedText,TextSizeCheck" />
 
                             <TextView
-                                android:id="@+id/specialization"
+                                android:id="@+id/app_tre_specialization"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunito_bold"
-                                android:layout_below="@+id/name"
+                                android:layout_below="@+id/app_tre_name"
                                 android:text="specialization"
                                 android:textColor="@color/text"
                                 android:textSize="12sp"
                                 tools:ignore="HardcodedText,SmallSp,TextContrastCheck,TextSizeCheck" />
 
                             <TextView
+                                android:id="@+id/app_tre_experience"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/nunito_bold"
                                 android:text="experience"
-                                android:layout_below="@+id/specialization"
+                                android:layout_below="@+id/app_tre_specialization"
                                 android:textColor="@color/greenish_cyan"
                                 android:textSize="12sp"
                                 tools:ignore="HardcodedText,SmallSp,TextContrastCheck,TextSizeCheck" />
@@ -188,6 +190,7 @@
                             android:layout_marginHorizontal="15dp">
 
                             <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/app_tre_review"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="4.45"
