--- a/app/src/main/res/layout/activity_approved_trainer_profile.xml
+++ b/app/src/main/res/layout/activity_approved_trainer_profile.xml
@@ -10,7 +10,7 @@
 
 
     <ImageView
-        android:id="@+id/trainer_img"
+        android:id="@+id/trainer_img_txt"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:orientation="vertical"
@@ -94,7 +94,7 @@
 
 
                             <androidx.appcompat.widget.AppCompatTextView
-                                android:id="@+id/trainer_name"
+                                android:id="@+id/trainer_name_txt"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
@@ -107,7 +107,7 @@
                                 tools:ignore="HardcodedText" />
 
                             <androidx.appcompat.widget.AppCompatTextView
-                                android:id="@+id/Functional_Strength"
+                                android:id="@+id/Functional_Strength_txt"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/trainer_name"
@@ -172,11 +172,23 @@
                             android:textSize="20sp"
                             tools:ignore="HardcodedText" />
 
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/trainer_eee_txt"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="6 years"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentEnd="true"
+                                android:layout_alignParentTop="true"
+                                android:textColor="@color/black"
+                                android:fontFamily="@font/nunito_regular"
+                                android:textSize="18sp"
+                                tools:ignore="HardcodedText" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="6 years experienced Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+                                android:text=" experienced Lorem ipsum dolor sit amet, consectetur adipiscing elit."
                                 android:layout_alignParentStart="true"
                                 android:layout_alignParentEnd="true"
                                 android:layout_alignParentTop="true"
@@ -268,6 +280,7 @@
                         tools:ignore="HardcodedText" />
 
                     <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/review_show_all"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
@@ -292,6 +305,7 @@
                     tools:ignore="UselessLeaf">
 
                     <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/trainer_review_txt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_bold"
@@ -360,20 +374,25 @@
                         tools:ignore="HardcodedText,SpUsage" />
 
                     <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/trainer_pay_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="300dp"
-                        android:text="999.00"
                         android:layout_alignParentTop="true"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginStart="280dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginEnd="24dp"
+                        android:layout_marginBottom="0dp"
+                        android:text="999"
                         android:textSize="22sp"
                         tools:ignore="HardcodedText" />
-                    
+
                 </RelativeLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_registration"
+                    android:id="@+id/book_btn_registration"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
