--- a/app/src/main/res/layout/fragment_height_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_height_bottom_sheet.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nunito_bold"
-                android:text="Weight"
+                android:text="Height"
                 android:textColor="@color/black"
                 android:paddingStart="10dp"
                 android:layout_marginTop="10dp"
