--- a/app/src/main/res/layout/activity_approved_trainer_profile.xml
+++ b/app/src/main/res/layout/activity_approved_trainer_profile.xml
@@ -43,7 +43,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/trainer_img"
+        android:layout_below="@+id/trainer_img_txt"
         android:layout_marginTop="280dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_alignParentStart="true"
@@ -280,7 +280,7 @@
                         tools:ignore="HardcodedText" />
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/review_show_all"
+                        android:id="@+id/review_show_allkaku"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
@@ -337,17 +337,19 @@
                     android:layout_below="@+id/rating_review"
                     tools:ignore="UselessLeaf">
 
-                    <androidx.appcompat.widget.AppCompatTextView
+                    <TextView
+                        android:id="@+id/kalu"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/nunito_regular"
-                        android:textSize="14sp"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentBottom="true"
+                        android:text="174 Ratings kalu"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="end"
                         android:layout_alignParentEnd="true"
-                        android:textColor="@color/black"
-                        android:text="174 Ratings"
-                        tools:ignore="HardcodedText" />
+                        android:layout_alignParentStart="true"
+                        android:text="174 Ratings"/>
 
                 </RelativeLayout>
 
