--- a/app/src/main/res/layout/rating_review_list_item.xml
+++ b/app/src/main/res/layout/rating_review_list_item.xml
@@ -77,6 +77,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/name_of_review"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -99,6 +100,7 @@
                     android:layout_marginHorizontal="15dp">
 
                     <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/review_show"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="4.45"
@@ -124,6 +126,7 @@
                 </RelativeLayout>
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/rating_show"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/rl_rating_review"
