--- a/app/src/main/res/layout/activity_appointment.xml
+++ b/app/src/main/res/layout/activity_appointment.xml
@@ -263,10 +263,10 @@
                                 android:src="@drawable/ic_line"
                                 tools:ignore="ContentDescription" />
 
-                            <androidx.constraintlayout.widget.ConstraintLayout
+                            <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="50dp"
-                                android:orientation="horizontal"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
                                 android:gravity="center"
                                 android:layout_marginHorizontal="20dp"
                                 android:layout_marginVertical="10dp"
@@ -287,31 +287,49 @@
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginHorizontal="20dp"
+    >
 
-                                <TextView
-                                    android:id="@+id/selected_time"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_alignParentEnd="true"
-                                    android:background="@drawable/text_bg"
-                                    android:clickable="true"
-                                    android:focusable="true"
-                                    android:gravity="center"
-                                    android:fontFamily="@font/nunito_semi_bold"
-                                    android:hint="Select Time"
-                                    android:minHeight="48dp"
-                                    android:paddingHorizontal="15dp"
-                                    android:paddingVertical="8dp"
-                                    android:textColor="@color/black"
-                                    android:textColorHint="@color/text"
+    <TextView
+        android:id="@+id/strat_time"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/text_bg"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="@font/nunito_semi_bold"
+        android:gravity="center"
+        android:hint="Start Time"
+        android:minHeight="48dp"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="5dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/text"
+        android:textSize="16sp" />
 
-
-                                    android:textSize="16sp"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent" />
-
-                            </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/end_time"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/text_bg"
+        android:clickable="true"
+        android:focusable="true"
+        android:fontFamily="@font/nunito_semi_bold"
+        android:gravity="center"
+        android:hint="End Time"
+        android:minHeight="48dp"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="5dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/text" />
+</RelativeLayout>
+                            </LinearLayout>
                         </LinearLayout>
 
 
