--- a/app/src/main/res/layout/activity_payment_completed.xml
+++ b/app/src/main/res/layout/activity_payment_completed.xml
@@ -72,16 +72,16 @@
             tools:ignore="ObsoleteLayoutParam">
 
             <LinearLayout
-                android:id="@+id/rl_al_details"
+                android:id="@+id/ll_al_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
+                android:layout_marginTop="140dp"
                 android:gravity="center"
                 android:layout_marginStart="20dp"
+                android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true"
                 android:orientation="vertical"
                 tools:ignore="ObsoleteLayoutParam">
 
@@ -113,7 +113,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_below="@+id/ll_al_details">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/active_card"
@@ -129,7 +131,7 @@
                     android:layout_alignParentTop="true"
                     tools:ignore="MissingConstraints"
                     android:layout_marginVertical="10dp"
-                    android:layout_marginHorizontal="10dp">
+                    android:layout_marginHorizontal="20dp">
 
 
                     <LinearLayout
@@ -147,6 +149,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Trainer"
+                            android:layout_marginStart="15dp"
                             android:fontFamily="@font/opensans_condensed_regular"
                             android:textSize="12sp"/>
 
@@ -154,6 +157,7 @@
                             android:id="@+id/rl_rating_review"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentStart="true"
                             android:layout_alignParentTop="true"
@@ -226,6 +230,14 @@
                             android:src="@drawable/ic_line"
                             tools:ignore="ContentDescription" />
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginVertical="10dp"
+                            android:orientation="vertical">
+
+
                         <androidx.appcompat.widget.AppCompatTextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -254,8 +266,10 @@
                             android:textSize="16sp"
                             android:fontFamily="@font/opensans_bold"
                             android:text="09:30 AM"/>
+                        </LinearLayout>
 
                     </LinearLayout>
+
 
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
