--- a/app/src/main/res/layout/activity_appointment.xml
+++ b/app/src/main/res/layout/activity_appointment.xml
@@ -256,6 +256,12 @@
                                 android:selectedWeekBackgroundColor="#FFFFFF"
                                 style="@style/MyWeekDayTextAppearance"
                                 />
+                            <TextView
+                                android:id="@+id/regiDate"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:visibility="gone"
+                                />
 
                             <ImageView
                                 android:layout_width="match_parent"
@@ -296,8 +302,8 @@
 
     <TextView
         android:id="@+id/strat_time"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:background="@drawable/text_bg"
         android:clickable="true"
@@ -310,12 +316,12 @@
         android:paddingVertical="5dp"
         android:textColor="@color/black"
         android:textColorHint="@color/text"
-        android:textSize="16sp" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/end_time"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:background="@drawable/text_bg"
         android:clickable="true"
@@ -327,7 +333,8 @@
         android:paddingHorizontal="15dp"
         android:paddingVertical="5dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/text" />
+        android:textColorHint="@color/text"
+        android:textSize="14sp"/>
 </RelativeLayout>
                             </LinearLayout>
                         </LinearLayout>
@@ -351,14 +358,16 @@
                     tools:ignore="NotSibling,UselessParent">
 
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_next"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="25dp"
-                        android:layout_marginEnd="25dp"
-                        android:layout_marginVertical="30dp"
+                        android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_alignParentStart="true"
+                        android:layout_marginVertical="30dp"
+                        android:layout_marginStart="23dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginEnd="27dp"
                         android:background="@drawable/btn_bg"
                         android:elevation="@dimen/button_elevation"
                         android:fontFamily="@font/opensans_bold"
