--- a/app/src/main/res/layout/fragment_height_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_height_bottom_sheet.xml
@@ -42,12 +42,12 @@
                     android:id="@+id/height_up_new"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_gravity="center"
                     android:baselineAligned="false"
                     android:elevation="20dp"
                     android:gravity="center"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentStart="true"
                     app:np_dividerColor="#00000000"
                     app:np_dividerDistance="80dp"
                     app:np_dividerThickness="4dp"
@@ -60,7 +60,8 @@
                     app:np_textAlign="textAlignCenter"
                     app:np_textColor="@color/black"
                     app:np_textSize="30dp"
-                    app:np_value="60" />
+                    app:np_value="60"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
             </RelativeLayout>
 
